--- a/Impl/src/main/resources/plugin.yml
+++ b/Impl/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Medusa
-version: 1.5-PRE4
+version: 1.5.3
 main: com.gladurbad.medusa.MedusaPlugin
 authors: [GladUrBad]
 description: Medusa Anticheat
