--- a/Impl/pom.xml
+++ b/Impl/pom.xml
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>com.github.retrooper</groupId>
             <artifactId>packetevents</artifactId>
-            <version>1.8-PRE-1</version>
+            <version>v1.8-pre-9</version>
         </dependency>
     </dependencies>
 
