Decently Large Overhaul
Please look through the code before merging. I am relatively new to Java and may have made dumb mistakes. Below is a changelog of everything I've done.

A couple things to also note:
- Any code I've added should be well commented as to help with any issues that may arise.
- This has not been tested outside of localhost and some usage of Clumsy.
- Again, I'm relatively new and can make stupid mistakes.

Changelog:

Combat -

AimAssistF:
- Added inside vehicle exempt (while in a vehicle useless rotation packets are sent. mojang best)
AimAssistI:
- Added teleport exempt (can false while teleporting)
- Added small buffer (still falses a lot. The check itself needs work. I dont do combat stuff, so cant help you there)
VelocityB:
- New check
- Simply not stable enough yet to put as the main velocity check, but I am unable to improve it myself. Attempted to use "prediction" to
an extent. Once the player has above 200ms it is just absolutely destroyed. Capable of detecting 99.99999% velocity at 0 ping at the 20th
velocity tick, sure, but ping just kills it.

Movement -

FastClimbA:
- Added velocity support to the non-buffer part
FlyA:
- Completely redid the check
- Using the generic vertical friction design with likely overcomplicated code. Same required air ticks as previous FlyA, but no buffer.
- Accounts for fall speed too (untested)
- Partial velocity support
- Despite using the same methods as VelocityB, it is pretty stable with high ping (tested with Clumsy on localhost, 300 ping)
- NOTE: It may require a small buffer. This has not been tested in a proper environment. Use with caution.
FlyB:
- Completely redid the check
- Should detect most air jumps much easier as its more strict (permanently saves going down until you touch the ground rather than just
looking at the previous)
FlyC:
- Instead of running the modulo again, I used the util that is already in the PositionProcessor
- Added a backup version of the same check which also checks for an

--- a/Impl/src/main/resources/config.yml
+++ b/Impl/src/main/resources/config.yml
@@ -31,6 +31,7 @@ appearance:
 
   themes:
     - "Medusa$ &aMedusa » &f%player% &7failed &f%checkName% (%checkType%) &7(x%vl%) &c%dev%$ &a &2"
+    - "Skidusa$ &4&lSkidusa&r&7 » &4%player%&7 flagged &4%checkName% &7(&4%checkType%&7) (&4x%vl%&7) &4%dev%$ &c &4"
     - "Overflow$ &7[&cMedusa&7] %player% flagged &c%checkName% (type %checkType%) VL: &c%vl% %dev%$ &c &4"
     - "Sparky$ &eMedusa &7> &6%player% &7has failed &6%checkName% (%checkType%) &cx%vl%$ &6 &e"
     - "Karhu$ &8[&b&lMedusa&r&8] &3%player% &8- &3%checkName% %checkType% &f%dev% &3(&bx%vl%&3)$ &b &3"
@@ -243,6 +244,11 @@ checks:
         # maximum-velocity-percentage: How high the velocity of the player can be before being flagged.
         minimum-velocity-percentage: 100
         maximum-velocity-percentage: 100
+      # WIP higher accuracy vertical velocity check.
+      b:
+        enabled: false
+        max-violations: 0
+        punish-command: ''
   # Movement Detections: Offers various checks designed to detect blatant movement advantages.
   movement:
     # FastClimb Detection: Checks if the player moves too quickly on ladders.
@@ -266,6 +272,11 @@ checks:
         punish-command: ''
       # Checks if the player claims to be on ground while in air.
       c:
+        enabled: true
+        max-violations: 10
+        punish-command: ''
+      # Checks if the player claims to be on ground while in air.
+      d:
         enabled: true
         max-violations: 10
         punish-command: ''
@@ -342,6 +353,11 @@ checks:
         enabled: true
         max-violations: 0
         punish-command: ''
+      # Checks for fast place tendencies.
+      b:
+        enabled: true
+        max-violations: 10
+        punish-command: ''
     # Inventory Detections: Checks for various cheats related to inventory (InventoryWalk, ChestSteal)
     inventory:
       # Checks if the player is moving while in their inventory.
@@ -403,6 +419,11 @@ checks:
         punish-command: ''
       # Checks if the player is attacking and digging at the same time.
       j:
+        enabled: true
+        max-violations: 15
+        punish-command: ''
+      # Checks if the player does not obey teleport rotation.
+      k:
         enabled: true
         max-violations: 15
         punish-command: ''
