--- a/ExampleAPI/pom.xml
+++ b/ExampleAPI/pom.xml
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>com.gladurbad</groupId>
             <artifactId>API</artifactId>
-            <version>${project.parent.version}</version>
+            <version>1.1.6</version>
         </dependency>
     </dependencies>
 
